removed parallax, fixed horizontal scroll

--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -258,7 +258,7 @@ a{
 	[class^="des-"]{
 		font-size: 0.8em;
 		color: @gray3;
-		margin-bottom: 0px;
+		margin: 0px;
 		@media(max-width:768px){
 			font-size: 0.8em;
 		}
@@ -586,6 +586,7 @@ a{
 	background-image: url("../../img/bc-android/newapp.png");
 		background-repeat: no-repeat;
 		background-position: center top;
+		height:450px;
 
 	// height: 500px;
 
@@ -606,7 +607,12 @@ a{
 	@media(min-width:992px){
 		margin-top: 3em;
 	display: flex;
+	  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex; 
 	align-items:center;
+	align-content:center;
 
 	}
 
@@ -658,87 +664,6 @@ a{
 
 .navbar-bottom#portfolio-pieces{
 	border-bottom: 1px solid @gray4;
-}
-
-.skrollr-desktop body {
-	height:100% !important;
-}
-
-body {
-	font-family:sans-serif;
-}
-
-p {
-	margin:1em 0;
-}
-
-.parallax-image-wrapper {
-	position:fixed;
-	left:0;
-	width:100%;
-	overflow:hidden;
-}
-
-.parallax-image-wrapper-50 {
-	height:50%;
-	top:-50%;
-}
-
-.parallax-image-wrapper-100 {
-	height:100%;
-	top:451px;
-}
-
-.parallax-image {
-	display:none;
-	position:absolute;
-	bottom:0;
-	left:0;
-	width:100%;
-	background-repeat:no-repeat;
-	background-position:center top;
-	// background-size:cover;
-}
-
-.parallax-image-50 {
-	height:200%;
-	top:-50%;
-}
-
-.parallax-image-100 {
-	height:100%;
-	top:375px;
-}
-
-.parallax-image.skrollable-between {
-	display:block;
-}
-
-.no-skrollr .parallax-image-wrapper {
-	display:none !important;
-}
-
-#skrollr-body {
-	height:100%;
-	overflow:visible;
-	position:relative;
-}
-
-.gap {
-	background:transparent center no-repeat;
-	// background-size:cover;
-}
-
-.skrollr .gap {
-	background:transparent !important;
-}
-
-.gap-50 {
-	height:50%;
-}
-
-.gap-100 {
-	height:100%;
 }
 
 .header, .content {
